--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       <div class="up-down">
         <div class="red"> <header><b>Team Builder</b></header>
-          <p>Scans our talent network to create the optimal team for your project</p>
+          <p>Scans our talent network to create the optimal team for your project.</p>
           <img src="./images/icon-team-builder.svg"class="icon" alt="team builder">
          </div>
          
