--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h3>Reliable, efficient delivery</h3>
         <h2><b> Powered by Technology</b></h2>
     
-        <h6> Our Artificial Intelligence powered tools use millions of project data <br> points 
-        to ensure that your project is successful</h6>
+        <p class="h6"> Our Artificial Intelligence powered tools use millions of project data <br> points 
+        to ensure that your project is successful</p>
       <div class="cards">
         <div class="cnt1">
           <header><b>Supervisor</b></header>
